# Multi-Object-tracking-2D

./: .clang-format  .gitattributes  .gitignore  0000.txt  MOT2D_Kalman_Filter.py  README.md  bbox.py  drawImage.py  gif.py  main.py  model.py  nuscenes_demo  test_again.py  visualization.py
data/data/Car_test/: 0001.txt  0002.txt  0003.txt  0004.txt  0005.txt  0006.txt  0007.txt  0008.txt  0009.txt  0010.txt  0011.txt  0012.txt  0013.txt  0014.txt  0015.txt  0016.txt  0017.txt  0018.txt  0019.txt  0020.txt  0021.txt  0022.txt  0023.txt  0024.txt  0025.txt  0026.txt  0027.txt  0028.txt
ros_integration/catkin_ws/src/: pointpillars_detection  quickstart.sh
ros_integration/catkin_ws/src/detection_and_tracking/: cpp_standard_selector.cmake  package.xml
ros_integration/catkin_ws/src/detection_and_tracking/common_lib/: CMakeLists.txt  package.xml
ros_integration/catkin_ws/src/detection_and_tracking/common_lib/include/: time.h
ros_integration/catkin_ws/src/detection_and_tracking/common_lib/include/common_lib/: common.hpp  geometry.hpp  params.h  time.h
ros_integration/catkin_ws/src/detection_and_tracking/common_lib/include/common_lib/algos/: convex_hullxy.hpp
ros_integration/catkin_ws/src/detection_and_tracking/common_lib/include/common_lib/types/: feature.h  object.h  tracking_options.h  type.h
ros_integration/catkin_ws/src/detection_and_tracking/common_lib/include/types/: type.h
ros_integration/catkin_ws/src/detection_and_tracking/common_lib/src/: params.cpp
ros_integration/catkin_ws/src/detection_and_tracking/common_lib_own/include/common_lib_own/types/: type.h
ros_integration/catkin_ws/src/detection_and_tracking/demo/: CMakeLists.txt  demo.cpp  main.cpp  package.xml
ros_integration/catkin_ws/src/detection_and_tracking/demo/include/demo/: demo.h
ros_integration/catkin_ws/src/detection_and_tracking/demo/launch/: launch.launch
ros_integration/catkin_ws/src/detection_and_tracking/demo/src/: demo.cpp  main.cpp
ros_integration/catkin_ws/src/detection_and_tracking/object_builders_lib/: CMakeLists.txt  package.xml
ros_integration/catkin_ws/src/detection_and_tracking/object_builders_lib/include/object_builders/: base_object_builder.h  min_box_object_builder.h  object_builder_manager.h
ros_integration/catkin_ws/src/detection_and_tracking/object_builders_lib/src/: min_box_object_builder.cpp
ros_integration/catkin_ws/src/detection_and_tracking/segmenters_lib/: CMakeLists.txt  package.xml
ros_integration/catkin_ws/src/detection_and_tracking/segmenters_lib/include/segmenters_lib/: euclidean_segmenter.h
ros_integration/catkin_ws/src/detection_and_tracking/segmenters_lib/src/: CMakeLists.txt  euclidean_segmenter.cpp  main.cpp
ros_integration/catkin_ws/src/detection_and_tracking/segmenters_lib_own/: package.xml
ros_integration/catkin_ws/src/detection_and_tracking/segmenters_lib_own/include/segmenters_lib_own/: base_segmenter.h  euclidean_segmenter.h
ros_integration/catkin_ws/src/detection_and_tracking/segmenters_lib_own/src/: euclidean_segmenter.cpp
ros_integration/catkin_ws/src/detection_and_tracking/tracking_lib/include/tracking/: base_tracking_worker.h  tracking_worker_manager.hpp
ros_integration/catkin_ws/src/kitti_detection_and_tracking/common/: CMakeLists.txt
ros_integration/catkin_ws/src/kitti_detection_and_tracking/feature_extractors/: CMakeLists.txt  README.md  package.xml
ros_integration/catkin_ws/src/kitti_detection_and_tracking/feature_extractors/include/feature_extractors/: base_feature_extractor.hpp  eigenvalue_feature_extractor.hpp  esf_feature_extractor.hpp  feature_extractor_manager.hpp  histogram_feature_extractor.hpp
ros_integration/catkin_ws/src/kitti_detection_and_tracking/feature_extractors/src/: eigenvalue_feature_extractor.cpp  esf_feature_extractor.cpp  histogram_feature_extractor.cpp
ros_integration/catkin_ws/src/kitti_detection_and_tracking/kitti_ros/launch/: kitti_continue_player.launch  kitti_player.launch
ros_integration/catkin_ws/src/kitti_detection_and_tracking/kitti_ros/rviz/: default.rviz
ros_integration/catkin_ws/src/kitti_detection_and_tracking/kitti_ros/scripts/: kitti_player.py
ros_integration/catkin_ws/src/kitti_detection_and_tracking/object_builders/: CMakeLists.txt
ros_integration/catkin_ws/src/kitti_detection_and_tracking/roi_filters/: CMakeLists.txt  README.md  package.xml
ros_integration/catkin_ws/src/kitti_detection_and_tracking/roi_filters/include/roi_filters/: roi.hpp
ros_integration/catkin_ws/src/kitti_detection_and_tracking/roi_filters/src/: tmp.cpp
ros_integration/catkin_ws/src/kitti_detection_and_tracking/segmenters/samples/: CMakeLists.txt
ros_integration/catkin_ws/src/kitti_detection_and_tracking/tracking/: CMakeLists.txt
ros_integration/catkin_ws/src/kitti_detection_and_tracking/tracking/config/: detection.yaml  tracking.yaml
ros_integration/catkin_ws/src/kitti_detection_and_tracking/tracking/rviz/: demo.rviz
ros_integration/catkin_ws/src/kitti_detection_and_tracking/tracking/samples/: CMakeLists.txt  tracking_node.cpp
ros_integration/catkin_ws/src/nuscenes_detection_and_tracking/common_lib/: CMakeLists.txt  package.xml
ros_integration/catkin_ws/src/nuscenes_detection_and_tracking/common_lib/include/common_lib/: params.h  (+1 more)
ros_integration/catkin_ws/src/nuscenes_detection_and_tracking/demo/: CMakeLists.txt  package.xml
ros_integration/catkin_ws/src/nuscenes_detection_and_tracking/demo/include/demo/: demo.h
ros_integration/catkin_ws/src/nuscenes_detection_and_tracking/demo/launch/: detection.yaml  nuscenes.rviz
ros_integration/catkin_ws/src/nuscenes_detection_and_tracking/demo/src/: demo.cpp
ros_integration/catkin_ws/src/nuscenes_detection_and_tracking/object_builders_lib/: CMakeLists.txt  package.xml
ros_integration/catkin_ws/src/nuscenes_detection_and_tracking/object_builders_lib/include/object_builders/: min_box_object_builder.h
ros_integration/catkin_ws/src/nuscenes_detection_and_tracking/object_builders_lib/src/: min_box_object_builder.cpp
ros_integration/catkin_ws/src/nuscenes_detection_and_tracking/segmenters_lib/: CMakeLists.txt  package.xml
(+6 files in other folders)
