<?xml version="1.0"?>
<package format="2">
  <name>demo</name>
  <version>0.0.0</version>
  <description>Detection and tracking libraries.</description>
  <maintainer email="jiayansong@u.nus.edu">Jia Yansong</maintainer>
  <license>MIT</license>

  <build_depend>common_lib</build_depend>
  <build_export_depend>common_lib</build_export_depend>
  <build_depend>segmenters_lib</build_depend>

  <buildtool_depend>catkin</buildtool_depend>
</package>
