<?xml version="1.0"?>
<package format="2">
  <name>segmenters_lib</name>
  <version>0.0.0</version>
  <description>The LiDAR segmenters library, for segmentation-based detection.</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="jiayansong@u.nus.edu">Jia Yansong</maintainer>


  <license>MIT</license>

  <build_depend>common_lib</build_depend>
  <build_export_depend>common_lib</build_export_depend>
  <!-- <build_depend>common_lib</build_depend>
  <build_depend>roi_filters_lib</build_depend>
  <depend>object_builders_lib</depend> -->
  <buildtool_depend>catkin</buildtool_depend>

  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
