<?xml version="1.0"?>
<package format="2">
  <name>demo_nuscenes</name>
  <version>0.0.0</version>
  <description>Detection and tracking libraries.</description>
  <maintainer email="jiayansong@u.nus.edu">Jia Yansong</maintainer>
  <license>MIT</license>

  <build_depend>common_lib_nuscenes</build_depend>
  <build_export_depend>common_lib_nuscenes</build_export_depend>
  <build_depend>segmenters_lib_nuscenes</build_depend>
  <depend>object_builders_lib_nuscenes</depend>

  <buildtool_depend>catkin</buildtool_depend>
</package>
